# rext-core

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLIFF_CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE.md  README.md  bootstrap.sh  rext-core.code-workspace  setup-dev.sh
.github/workflows/: rust.yml
hooks/: pre-commit
src/: error.rs  lib.rs
src/files/: mod.rs
src/files/templates/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  example.env  gitignore  index.html  main.rs  rext.toml  style.css
src/files/templates/backend/: main.rs
src/files/templates/backend/bridge/: mod.rs
src/files/templates/backend/bridge/handlers/: admin.rs  auth.rs  mod.rs  roles.rs  websocket.rs
src/files/templates/backend/bridge/middleware/: admin.rs  auth.rs  logging.rs
src/files/templates/backend/bridge/routes/: admin.rs  auth.rs
src/files/templates/backend/bridge/types/: admin.rs  auth.rs  logging.rs  mod.rs
src/files/templates/backend/control/services/: admin_service.rs  auth_service.rs  database_service.rs  mod.rs  permission_service.rs  server_config.rs  session_service.rs  startup.rs  system_monitor.rs  token_service.rs  user_service.rs
src/files/templates/backend/domain/: auth.rs  mod.rs  permissions.rs  user.rs  validation.rs
src/files/templates/backend/infrastructure/: app_error.rs  cors.rs  database.rs  email.rs  job_queue.rs  jwt_claims.rs  logging.rs  mod.rs  openapi.rs  query_performance.rs  scheduler.rs  server.rs  websocket.rs
src/files/templates/backend/infrastructure/macros/: mod.rs  permission_macro.rs
src/files/templates/frontend/: openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts
src/files/templates/frontend/config/: unified.config.ts
src/files/templates/migration/: Cargo.toml
src/files/templates/migration/src/: initial_migration.rs  lib.rs
tests/: integration_tests.rs
